--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://jacobhuff:nopeelstats@cluster0.pgt15.mongodb.net/Cluster0?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://jacobhuff:nopeelstats@cluster0.pgt15.mongodb.net/nopeelstats?retryWrites=true&w=majority
