--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongodb": "^3.6.4",
     "mongoose": "5.11.15",
     "overwatch-stat": "^0.2.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-router-dom": "^5.2.0"
   }
 }
